# wow-helper-bot

./: .gitignore  Dockerfile  Makefile  app_Dockerfile  bot_Dockerfile  crawler_Dockerfile  log_Dockerfile  pyproject.toml  rio_character_info
.github/workflows/: docker-image-app.yml  docker-image-bot.yml  docker-image-crawler.yml  docker-image-log.yml  mypy.yml  ruff.yml
dcbot/: __main__.py  bot.py  character_processors.py  config.py  functions.py  guild_processors.py  processors.py
dpschecker/: __main__.py  bot.py  config.py  functions.py  logs.py  processors.py
logapp/: app.py  logs.py
logapp/routes/: __init__.py  char_list.py  character.py
logapp/web_templates/: char_list.html
logfetcher/: __main__.py  config.py  db_redis.py  servicer.py
logfetcher/cruds/: characters.py  guilds.py  logs.py  processros.py  rfuncs.py  rio_fetcher.py  rio_runs.py  wlog_auth.py
logfetcher/endpoints/: __init__.py  characters.py  ranks.py
logfetcher/models/: characters.py  guild.py  logs.py  zones.py
logfetcher/proto/: log_service.proto  log_service_pb2.py  log_service_pb2.pyi  log_service_pb2_grpc.py
logfetcher/wow_crawler/: __main__.py  crawler.py
