[tool.poetry]
name = "wow-wathcer"
version = "0.1.0"
description = "WoW watcher for guilds/character/logs"
authors = ["Potya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.0"
pydantic = "^1.10.5"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
httpx = "^0.23.3"
loguru = "^0.6.0"
grpcio = "*"
google = "*"
backoff = "^2.2.1"
python-dotenv = "*"
ruff = "~0.0"
types-protobuf = "^4.23.0.1"
types-redis = "^4.5.5.2"
grpcio-tools = "^1.54.2"
requests-html = "^0.10.0"
rauth = "^0.7.3"
litestar = {extras = ["standard"], version = "^2.0.0b4"}
uvicorn = "^0.23.1"
selenium = "^4.10.0"
urllib3 = "^2.0.4"
beautifulsoup4 = "^4.12.2"
js2py = "^0.74"
redis = "^5.0.0"
matplotlib = "^3.7.2"
starlette = "^0.31.1"



[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "logfetcher/proto"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10